Replace <div class=qr-container> with the main tag and <p class=qr-txt-lrg> with <h1> to fix the accessibility issue.

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="qr-container">
+    <main>
       <img class="qr-img" src="./images/image-qr-code.png" alt="qr-code" />
-      <p class="qr-txt-lrg">
+      <h1>
         Improve your front-end skills by building projects
-      </p>
+      </h1>
       <p class="qr-txt-small">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
-    </div>
+    </main>
 
     <!-- <div class="attribution">
       Challenge by
